--- a/vscode-yapi-generate/package.json
+++ b/vscode-yapi-generate/package.json
@@ -1,53 +1,54 @@
 {
-	"name": "y2t",
-	"displayName": "y2t",
-	"description": "yapi to typescript generation tool",
-	"version": "1.0.0",
-	"publisher": "SewerKingdom",
-	"license": "MIT",
-	"author": "Wynne, Ben",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/SewerKing/y2t.git"
-	},
-	"engines": {
-		"vscode": "^1.57.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-		"onStartupFinished"
-	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": []
-	},
-	"icon": "resources/logo.png",
-	"scripts": {
-		"publish": "vsce publish",
-		"build": "vsce package",
-		"vscode:prepublish": "yarn run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"pretest": "yarn run compile && yarn run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
-	},
-	"devDependencies": {
-		"@types/glob": "^7.1.3",
-		"@types/mocha": "^8.2.2",
-		"@types/node": "14.x",
-		"@types/vscode": "^1.57.0",
-		"@typescript-eslint/eslint-plugin": "^4.26.0",
-		"@typescript-eslint/parser": "^4.26.0",
-		"eslint": "^7.27.0",
-		"glob": "^7.1.7",
-		"mocha": "^8.4.0",
-		"typescript": "^4.3.2",
-		"vscode-test": "^1.5.2"
-	},
-	"dependencies": {
-		"y2t": "^0.0.1"
-	}
+  "name": "y2t-f",
+  "displayName": "y2t-f",
+  "description": "yapi to typescript generation tool",
+  "version": "1.0.1",
+  "publisher": "liuyangemmm",
+  "license": "MIT",
+  "author": "Wynne, Ben",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SewerKing/y2t.git"
+  },
+  "engines": {
+    "vscode": "^1.57.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
+  "main": "./out/extension.js",
+  "contributes": {
+    "commands": []
+  },
+  "icon": "resources/logo.png",
+  "scripts": {
+    "publish": "npx vsce publish",
+    "build": "npx vsce package",
+    "vscode:prepublish": "yarn run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "yarn run compile && yarn run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
+  },
+  "devDependencies": {
+    "@types/glob": "^7.1.3",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "14.x",
+    "@types/vscode": "^1.57.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "eslint": "^7.27.0",
+    "glob": "^7.1.7",
+    "mocha": "^8.4.0",
+    "typescript": "^4.3.2",
+    "vsce": "^2.15.0",
+    "vscode-test": "^1.5.2"
+  },
+  "dependencies": {
+    "y2t": "^0.0.4"
+  }
 }
